# web-panel

./: .env  .gitignore  Dockerfile  app.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
db/: chroma.sqlite3
fileprocessing/: .env  README.md  ask_clarification.py  callback_metadata.py  execute_command.py  firestore.py  langchain_openrouter_llama.ipynb  requirements.txt  sample_program.py  smartfile-422907-2f9ca6d83372.json  state.py  tool_doc_retrieval.py  tools_agent.py
fileprocessing/.ipynb_checkpoints/: code.py  langchain_openrouter_llama-checkpoint.ipynb  langchain_openrouter_llama3-checkpoint.ipynb
fileprocessing/llm_docs/: Basic Usage -- ffpmpeg.md  Comprehensive Docs -- ffmpeg Examples.md  Converting PDF to HTML -- pdftohtml Examples (poppler).html  Documentation -- Dasel.html  Merge PDF Pages -- pdfunite Examples (poppler).html  PDF Image Handling -- pdfimages Examples (poppler)  PDF Text Extraction -- pdftotext Examples (poppler).html  Render PDF Files -- pdftocairo Examples (poppler).html  Thumbnails -- ImageMagick Examples.html  Usage Documentation -- ImageMagick.md  Usage Documentation -- Pandoc.md
web-app/: .firebaserc  package-lock.json  package.json  tailwind.config.cjs
web-app/src/: app.d.ts  app.html  hooks.server.ts
web-app/src/lib/: kv.ts  (+2 more)
working_dir/2f8dcda3-b1d0-4ea0-b668-2399a71a9fea/: online_order.yml
working_dir/33e315ad-d107-4af2-83ef-7946cd50679d/: convert.sh
working_dir/70471ce1-d5f6-48ab-8983-8ffae461ee14/: process_data.py
(+36 files in other folders)
