[tool.poetry]
name = "smartfile_cloud"
version = "0.0.1"
authors = [
  "Neil Agrawal"
]
description = "A package to run smartfile on the cloud"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
flake8 = "^3.9"

[project.urls]
Homepage = "https://github.com/Smart-Files/cloud-development/"
Issues = "https://github.com/Smart-Files/cloud-development/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

